--- a/env.example
+++ b/env.example
@@ -1,8 +1,9 @@
-# Database Configuration for Local PostgreSQL
-# Copy this file to .env.local and update the values
-
-DB_NAME=quran_words
+# Database Configuration
+DB_HOST=your-project-ref.supabase.co
+DB_PORT=5432
+DB_NAME=postgres
 DB_USER=postgres
-DB_PASSWORD=your_password_here
-DB_HOST=localhost
-DB_PORT=5432 
+DB_PASSWORD=your-supabase-password
+
+# API Configuration
+NEXT_PUBLIC_API_BASE_URL=https://quran-word-app.vercel.app 
