updated explorer and game ui

--- a/env.example
+++ b/env.example
@@ -1,9 +1,13 @@
 # Database Configuration
+# Option 1: Use individual environment variables
 DB_HOST=your-project-ref.supabase.co
 DB_PORT=5432
 DB_NAME=postgres
 DB_USER=postgres
 DB_PASSWORD=your-supabase-password
+
+# Option 2: Use connection string (recommended for Vercel)
+# DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@[YOUR-PROJECT-REF].supabase.co:5432/postgres
 
 # API Configuration
 NEXT_PUBLIC_API_BASE_URL=https://quran-word-app.vercel.app 
