--- a/env.example
+++ b/env.example
@@ -1,13 +1,20 @@
 # Database Configuration
-# Option 1: Use individual environment variables
-DB_HOST=your-project-ref.supabase.co
+# Local PostgreSQL database (Docker container)
+DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=postgres
-DB_USER=postgres
-DB_PASSWORD=your-supabase-password
+DB_NAME=quran_local
+DB_USER=quran
+DB_PASSWORD=quran123
+
+# For production/Supabase, use these values instead:
+# DB_HOST=your-project-ref.supabase.co
+# DB_NAME=postgres
+# DB_USER=postgres
+# DB_PASSWORD=your-supabase-password
+# SSL=true
 
 # Option 2: Use connection string (recommended for Vercel)
-# DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@[YOUR-PROJECT-REF].supabase.co:5432/postgres
+# DATABASE_URL=postgresql://quran:quran123@localhost:5432/quran_local
 
 # API Configuration
 NEXT_PUBLIC_API_BASE_URL=https://quran-word-app.vercel.app 
